--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="styles.css">
 </head>
+<body>
     <!-- navbar -->
     <nav class="navbar">
         <div class="navbar-center">
@@ -26,7 +27,14 @@
         </div>
     </nav>
     <!-- end of navbar -->
-<body>
+    <!-- showcase -->
+    <header class="showcase">
+        <div class="banner">
+            <h1 class="banner-title">Furniture Collection</h1>
+            <button class="banner-btn">shop now</button>
+        </div>
+    </header>
+    <!-- end of showcase -->
     <script src="app.js"></script>
 </body>
 </html>
